[CMake] Add copyrights back

--- a/manager/CMakeLists.txt
+++ b/manager/CMakeLists.txt
@@ -1,8 +1,18 @@
-include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/husky ${HUSKY_EXTERNAL_INCLUDE})
+# Copyright 2016 Husky Team
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
-if(DEP_FOUND)
-    include_directories(${ZMQ_INCLUDE_DIR})
-endif(DEP_FOUND)
+include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/husky ${HUSKY_EXTERNAL_INCLUDE})
 
 add_library(pyhusky-manager-master-objs OBJECT
   opdag.cpp
@@ -48,9 +58,5 @@ set_property(TARGET PyHuskyDaemon PROPERTY CXX_STANDARD 14)
 add_executable(PyHuskyMaster master.cpp $<TARGET_OBJECTS:husky-master-objs>)
 target_link_libraries(PyHuskyMaster pyhusky-master)
 target_link_libraries(PyHuskyMaster husky)
-target_link_libraries(PyHuskyMaster ${husky-master-dep})
 target_link_libraries(PyHuskyMaster ${HUSKY_EXTERNAL_LIB})
-if(WIN32)
-    set_target_properties(PyHuskyMaster PROPERTIES COMPILER_FLAG "/EHsc")
-endif()
 set_property(TARGET PyHuskyMaster PROPERTY CXX_STANDARD 14)
