[PyHusky] Rearrange pyhusky_master and pyhusky_daemon
Ref #16.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ add_subdirectory(husky)
 add_definitions(${HUSKY_EXTERNAL_DEFINITION})
 
 add_subdirectory(backend)
-add_subdirectory(manager)
+add_subdirectory(daemon)
+add_subdirectory(master)
